@refactor Fix error level PMD violations